<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_hello_toast"
            android:text="@string/title_name_hello_toast"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_score_keeper"
            android:text="@string/title_name_score_keeper"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_scroll_text"
            android:text="@string/title_name_scroll_text"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_keyboard_dial_phone"
            android:text="@string/title_name_keyboard_dial_phone"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_implicit_intents"
            android:text="@string/title_name_implicit_intents"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_two_activities"
            android:text="@string/title_name_two_activities"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_life_cycle"
            android:text="@string/title_name_life_cycle"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_droid_cafe"
            android:text="@string/title_name_droid_cafe"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_droid_cafe_settings"
            android:text="@string/title_name_droid_cafe_settings"
            android:gravity="center"/>


    </LinearLayout>
</LinearLayout>